@@ -2,7 +2,7 @@
 GenericName=WMV Player
 Name=Moonlight WM
 Comment=Standalone player for Windows Media content
-Exec=moonlight-media-player
+Exec=moonlight-media-player %U
 Icon=moonlight-media-player
 Terminal=false
 Type=Application
